samples/_failures_safe/1761073630_2072ab_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d5f140e5.c: In function ‘main’:
./samples/SAFE/__tmp_d5f140e5.c:142:35: error: expected ‘]’ at end of input
  142 |             int matrix2[rows][cols
      |                                   ^
      |                                   ]
./samples/SAFE/__tmp_d5f140e5.c:142:13: error: expected declaration or statement at end of input
  142 |             int matrix2[rows][cols
      |             ^~~
./samples/SAFE/__tmp_d5f140e5.c:142:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d5f140e5.c:142:13: error: expected declaration or statement at end of input
